--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -17,8 +18,12 @@
     "express-async-handler": "^1.2.0",
     "googleapis": "^110.0.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "6.7.2",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
+    "qrcode": "^1.5.1",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
   }
